--- a/index.html
+++ b/index.html
@@ -25,38 +25,42 @@
           </ul>
         </div>
         <div class="contentwrapper">
-          <div class="title" id="title">Register Here</div>
-          <div id="register_form">            
-            <input type="text" placeholder="username" id="username"/>
-            <button onclick="registerClick()">Register</button>
-          </div>
-          <div id="registerDiv" style="display: none">
-            <h1 id="scoreText" style="color: white"></h1>
-            <h1 id="depositText" style="color: white"></h1>
-            <input type="text" placeholder="deposito" id="deposit"/>
-            <button onclick="depositClick()" id="depositButton">Tambah Deposit</button>
-            <button onclick="logoutClick()" id="logoutButton">Logout</button>
+          <div class="background">
+            <div class="title" id="title">Register Here</div>
+            <div id="register_form">            
+              <input type="text" placeholder="username" id="username"/>
+              <button onclick="registerClick()">Register</button>
+            </div>
+            <div id="registerDiv" style="display: none">
+              <h1 id="scoreText" style="color: white"></h1>
+              <h1 id="depositText" style="color: white"></h1>
+              <input type="text" placeholder="deposito" id="deposit"/>
+              <button onclick="depositClick()" id="depositButton">Tambah Deposit</button>
+              <button onclick="logoutClick()" id="logoutButton">Logout</button>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <section id="start" class="loginedBox">
       <div class="container red">
-        <div class="gamewrapper">
-          <div class="box" id="box1"></div>
-          <div class="box" id="box2"></div>
-          <div class="box" id="box3"></div>
-          <div id="box4"></div>
-          <div id="box5"></div>
-        </div>
-        <div class="buttonwrapper">
-          <button class="startButtton" onclick="setLevel(3)"> 1X </button>
-          <button class="startButtton" onclick="setLevel(4)"> 2X </button>
-          <button class="startButtton" onclick="setLevel(5)"> 3X </button>
-        </div>
-        <div class="buttonwrapper">
-          <button class="startButtton" onclick="startOnClick()">START</button>
-          <button class="startButtton" onclick="stopOnClick()">STOP</button>
+        <div class="background1">
+          <div class="gamewrapper">
+            <div class="box" id="box1"></div>
+            <div class="box" id="box2"></div>
+            <div class="box" id="box3"></div>
+            <div id="box4"></div>
+            <div id="box5"></div>
+          </div>
+          <div class="buttonwrapper">
+            <button class="startButtton" onclick="setLevel(3)"> 1X </button>
+            <button class="startButtton" onclick="setLevel(4)"> 2X </button>
+            <button class="startButtton" onclick="setLevel(5)"> 3X </button>
+          </div>
+          <div class="buttonwrapper">
+            <button class="startButtton" onclick="startOnClick()">START</button>
+            <button class="startButtton" onclick="stopOnClick()">STOP</button>
+          </div>
         </div>
       </div>
     </section>
